--- a/frontend/src/app/components/firm/firm.component.html
+++ b/frontend/src/app/components/firm/firm.component.html
@@ -166,6 +166,24 @@
                       </p-messages>
                     </div>
 
+                    <div>
+                      <input
+                        formControlName="sittingArea"
+                        type="number"
+                        pInputText
+                        placeholder="Sitting Area"
+                      />
+                      <p-messages
+                        *ngIf="!sittingArea?.valid || sittingArea?.dirty"
+                        severity="error"
+                      >
+                        <p-message
+                          severity="error"
+                          text="Sitting area is required."
+                        ></p-message>
+                      </p-messages>
+                    </div>
+
                     <!-- Radio Buttons for Canvas or File Upload -->
                     <div>
                       <label>
@@ -196,37 +214,66 @@
                         width="500"
                         height="400"
                         style="border: 3px solid #000000"
-                        (drop)="onDrop($event)" 
+                        (drop)="onDrop($event)"
                         (dragover)="onDragOver($event)"
                       ></canvas>
 
                       <div class="row">
                         <div class="col-sm-3">
-                          <img src="assets/photos/green-square.jpeg" 
-                          id="draggableImage" 
-                          class="draggable-image" 
-                          draggable="true" 
-                          (dragstart)="onDragStart($event)"
-     a                    lt="Drag Me">
+                          <img
+                            src="assets/photos/green-square.jpeg"
+                            id="draggableImage"
+                            class="draggable-image"
+                            draggable="true"
+                            (dragstart)="onDragStart($event)"
+                            a
+                            lt="Drag Me"
+                          />
                         </div>
                         <div class="col-sm-3">
-                          <img src="assets/photos/brown-circle.jpeg" 
-                          id="draggableImage" 
-                          class="draggable-image" 
-                          draggable="true" 
-                          (dragstart)="onDragStart($event)"
-     a                    lt="Drag Me">
+                          <img
+                            src="assets/photos/brown-circle.jpeg"
+                            id="draggableImage"
+                            class="draggable-image"
+                            draggable="true"
+                            (dragstart)="onDragStart($event)"
+                            a
+                            lt="Drag Me"
+                          />
                         </div>
                         <div class="col-sm-3">
-                          <img src="assets/photos/tall-gray-rectangle.jpeg" 
-                          id="draggableImage" 
-                          class="draggable-image" 
-                          draggable="true" 
-                          (dragstart)="onDragStart($event)"
-     a                    lt="Drag Me">
+                          <img
+                            src="assets/photos/tall-gray-rectangle.jpeg"
+                            id="draggableImage"
+                            class="draggable-image"
+                            draggable="true"
+                            (dragstart)="onDragStart($event)"
+                            a
+                            lt="Drag Me"
+                          />
                         </div>
                         <div class="col-sm-3">
-                          
+                          <!-- Show rectangle image if the type is 'private' -->
+                          <img
+                            *ngIf="type === 'private'"
+                            src="assets/photos/wide-blue-rectangle.jpeg"
+                            id="draggableImage"
+                            class="draggable-image"
+                            draggable="true"
+                            (dragstart)="onDragStart($event)"
+                            alt="Drag Me"
+                          />
+
+                          <!-- Show ellipse image if the type is 'restaurant' -->
+                          <img
+                            *ngIf="type === 'restaurant'"
+                            src="assets/photos/wide-blue-elipse.jpeg"
+                            id="draggableImage"
+                            class="draggable-image"
+                            draggable="true"
+                            (dragstart)="onDragStart($event)"
+                            alt="Drag Me"
+                          />
                         </div>
                       </div>
                     </div>
@@ -249,12 +296,31 @@
 
                 <!-- Step 3: Additional Requests -->
                 <div *ngSwitchCase="2">
-                  <form [formGroup]="newBookingForm">
+                  <!-- Dynamic checkboxes for services -->
+
+                  <div *ngFor="let service of firm.services; let i = index">
+                    <p-checkbox
+                      [inputId]="service.name"
+                      [value]="service"
+                      (onChange)="toggleService($event, service, i)"
+                    >
+                    </p-checkbox>
+                    <label [for]="service.name">{{ service.name }}</label>
+                  </div>
+                  
+                  <form [formGroup]="newBookingForm" (ngSubmit)="onSubmit()">
                     <textarea
                       formControlName="requests"
                       pInputTextarea
                       placeholder="Additional Requests"
                     ></textarea>
+                    <button
+                      pButton
+                      type="submit"
+                      label="Make booking"
+                      severity="contrast"
+                      [disabled]="newBookingForm.invalid"
+                    ></button>
                   </form>
                 </div>
               </div>
