Added backend for booking server side pagiantion

--- a/frontend/src/app/components/owner/owner-dashboard-bookings/owner-dashboard-bookings.component.html
+++ b/frontend/src/app/components/owner/owner-dashboard-bookings/owner-dashboard-bookings.component.html
@@ -1,1 +1,8 @@
-<p>ownder-dashboard-bookings works!</p>
+<div class="row">
+    <div class="col-md-6">
+<!-- active bookings -->
+    </div>
+    <div class="col-md-6">
+<!-- archived bookings -->
+    </div>
+</div>
