--- a/frontend/src/app/components/owner/owner-dashboard-bookings/owner-dashboard-bookings.component.html
+++ b/frontend/src/app/components/owner/owner-dashboard-bookings/owner-dashboard-bookings.component.html
@@ -1,8 +1,58 @@
 <div class="row">
     <div class="col-md-6">
-<!-- active bookings -->
+        <div class="card">
+            <p-table
+              [value]="active_bookings"
+              [paginator]="true"
+              [rows]="activeBooking_limit"
+              [totalRecords]="activeBooking_totalPages"
+              [lazy]="true"
+              [showCurrentPageReport]="true"
+              [tableStyle]="{ 'min-width': '50rem' }"
+              currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
+              (onLazyLoad)="pageChange($event, 'active')"
+            >
+              <ng-template pTemplate="header">
+                <tr>
+                  <th style="width:25%">Date</th>
+                  <th style="width:25%">Firm</th>
+                </tr>
+              </ng-template>
+              <ng-template pTemplate="body" let-activeBooking>
+                <tr>
+                  <td>{{ activeBooking.startDate }}</td>
+                </tr>
+              </ng-template>
+             
+            </p-table>
+        </div>
     </div>
     <div class="col-md-6">
-<!-- archived bookings -->
+      <div class="card">
+        <p-table
+          [value]="archived_bookings"
+          [paginator]="true"
+          [rows]="archivedBooking_limit"
+          [totalRecords]="archivedBooking_totalPages"
+          [lazy]="true"
+          [showCurrentPageReport]="true"
+          [tableStyle]="{ 'min-width': '50rem' }"
+          currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
+          (onLazyLoad)="pageChange($event, 'archived')"
+        >
+          <ng-template pTemplate="header">
+            <tr>
+              <th style="width:25%">Date</th>
+              <th style="width:25%">Firm</th>
+            </tr>
+          </ng-template>
+          <ng-template pTemplate="body" let-archivedBooking>
+            <tr>
+              <td>{{ archivedBooking.startDate }}</td>
+            </tr>
+          </ng-template>
+         
+        </p-table>
+    </div>
     </div>
 </div>
