Bugfixes in routing and implemented separate function for password changing

--- a/frontend/src/app/components/decorater/decorater-dashboard-statistics/decorater-dashboard-statistics.component.html
+++ b/frontend/src/app/components/decorater/decorater-dashboard-statistics/decorater-dashboard-statistics.component.html
@@ -1,1 +1,6 @@
-<p>decorater-dashboard-statistics works!</p>
+<div class="row">
+    <div class="col-md-4"></div>
+    <div class="col-md-4"></div>
+    <div class="col-md-4"></div>
+
+</div>
