--- a/frontend/src/app/components/owner/owner-dashboard-bookings/owner-dashboard-bookings.component.html
+++ b/frontend/src/app/components/owner/owner-dashboard-bookings/owner-dashboard-bookings.component.html
@@ -21,6 +21,8 @@
               <ng-template pTemplate="body" let-activeBooking>
                 <tr>
                   <td>{{ activeBooking.startDate }}</td>
+                  <td>{{ activeBooking.firm }}</td>
+
                 </tr>
               </ng-template>
              
