--- a/frontend/src/app/components/decorater/decorater-dashboard-statistics/decorater-dashboard-statistics.component.html
+++ b/frontend/src/app/components/decorater/decorater-dashboard-statistics/decorater-dashboard-statistics.component.html
@@ -1,6 +1,12 @@
 <div class="row">
-    <div class="col-md-4"></div>
-    <div class="col-md-4"></div>
-    <div class="col-md-4"></div>
-
+  <div class="col-md-4">
+    <p-chart type="bar" [data]="" [options]=""></p-chart>
+  </div>
+  <div class="col-md-4">
+    <p-chart type="pie" [data]="" [options]=""></p-chart>
+  </div>
+  <div class="col-md-4">
+    <p-chart type="bar" [data]="" [options]=""></p-chart>
+  </div>
 </div>
+
