Added backend comment implementation

--- a/frontend/src/app/components/decorater/decorater-dashboard/decorater-dashboard.component.html
+++ b/frontend/src/app/components/decorater/decorater-dashboard/decorater-dashboard.component.html
@@ -24,8 +24,9 @@
         >
           <div class="navbar-nav">
             <a routerLink="/decorator/profile" class="nav-item btn btn-outline-primary ms-2">Profile</a>
-            <a routerLink="/decorator/firms" class="nav-item btn btn-outline-primary ms-2">Firms</a>
             <a routerLink="/decorator/bookings" class="nav-item btn btn-outline-primary ms-2">Bookings</a>
+            <a routerLink="/decorator/maintenence" class="nav-item btn btn-outline-primary ms-2">Maintenance</a>
+
             <a routerLink="/decorator/statistics" class="nav-item btn btn-outline-primary ms-2">Statistics</a>
 
             <button
