--- a/frontend/src/app/components/owner/owner-dashboard-bookings/owner-dashboard-bookings.component.html
+++ b/frontend/src/app/components/owner/owner-dashboard-bookings/owner-dashboard-bookings.component.html
@@ -22,7 +22,7 @@
             <th style="width: 25%">Services</th>
           </tr>
         </ng-template>
-        <ng-template pTemplate="body" let-activeBooking let-i="index">
+        <ng-template pTemplate="body" let-activeBooking let-i="rowIndex">
           <tr>
             <td>{{ activeBooking.bookingDate }}</td>
             <td>{{ activeBooking.startDate }}</td>
@@ -32,9 +32,16 @@
                 {{ service.name }}
               </p>
             </td>
-
+            <td *ngIf="canCancelBooking(i)">
+              <button
+                pButton
+                label="Cancel booking"
+                class="p-button-danger mt-2"
+                style="text-wrap: nowrap;"
+                (click)="cancelBooking(i)"
+              ></button>
+            </td>
           </tr>
- 
         </ng-template>
       </p-table>
     </div>
@@ -68,8 +75,6 @@
             <td>{{ archivedBooking.firm }}</td>
             <td>{{ archivedBooking.comment }}</td>
             <td>{{ archivedBooking.rating }}</td>
-
-
           </tr>
         </ng-template>
       </p-table>
