Booking counting works

--- a/frontend/src/app/components/homepage/homepage.component.html
+++ b/frontend/src/app/components/homepage/homepage.component.html
@@ -48,13 +48,13 @@
                     </p>
                 </div>
                 <div class="col-md text-center">
-                    <p class="text-nowrap">Bookings in past 24 hours:</p>
+                    <p class="text-nowrap">Bookings in past 24 hours: {{ pastDayCount }}</p>
                 </div>
                 <div class="col-md text-center">
-                    <p class="text-nowrap">Bookings in past week:</p>
+                    <p class="text-nowrap">Bookings in past week: {{ pastWeekCount }}</p>
                 </div>
                 <div class="col-md text-center">
-                    <p class="text-nowrap">Bookings in past month:</p>
+                    <p class="text-nowrap">Bookings in past month: {{ pastMonthCount }}</p>
                 </div>
             </div>
             <!-- Table row -->
