Finishing job works

--- a/frontend/src/app/components/sign-up/sign-up.component.html
+++ b/frontend/src/app/components/sign-up/sign-up.component.html
@@ -300,7 +300,7 @@
                 chooseLabel="Choose"
                 chooseIcon="pi pi-upload"
                 url="https://www.primefaces.org/cdn/api/upload.php"
-                accept=".png|.jpg"
+                accept=".png,.jpg"
                 [maxFileSize]="1000000"
                 (onSelect)="onFileSelected($event)"
               ></p-fileUpload>
