user reviews work

--- a/frontend/src/app/components/decorater/decorater-dashboard-statistics/decorater-dashboard-statistics.component.html
+++ b/frontend/src/app/components/decorater/decorater-dashboard-statistics/decorater-dashboard-statistics.component.html
@@ -1,12 +1,7 @@
 <div class="row">
-  <div class="col-md-4">
-    <p-chart type="bar" [data]="" [options]=""></p-chart>
+  <div class="col-md-12">
+    <p-chart type="bar" [data]="byMonthChartData" styleClass="p-mb-4"></p-chart>
   </div>
-  <div class="col-md-4">
-    <p-chart type="pie" [data]="" [options]=""></p-chart>
-  </div>
-  <div class="col-md-4">
-    <p-chart type="bar" [data]="" [options]=""></p-chart>
-  </div>
+  
 </div>
 
