--- a/frontend/src/app/components/owner/owner-dashboard-bookings/owner-dashboard-bookings.component.html
+++ b/frontend/src/app/components/owner/owner-dashboard-bookings/owner-dashboard-bookings.component.html
@@ -63,24 +63,45 @@
 
         <ng-template pTemplate="header">
           <tr>
-            <th style="width: 25%">Finish Date</th>
-            <th style="width: 25%">Firm</th>
-            <th style="width: 25%">Comment</th>
-            <th style="width: 25%">Rating</th>
+            <th style="width: 15%">Finish Date</th>
+            <th style="width: 15%">Firm</th>
+            <th style="width: 45%">Review</th>
+            <th style="width: 15%">Rating</th>
           </tr>
         </ng-template>
         <ng-template pTemplate="body" let-archivedBooking let-i="rowIndex">
           <tr>
             <td>{{ archivedBooking.finishDate }}</td>
             <td>{{ archivedBooking.firm }}</td>
-            <td>{{ archivedBooking.comment }}</td>
+            <td *ngIf="canComment(i)">
+              <form
+                [formGroup]="commentForm"
+                (ngSubmit)="review(i)"
+                class="inline-form"
+              >
+                <textarea
+                  rows="2"
+                  pInputTextarea
+                  formControlName="text"
+                ></textarea>
+                <button
+                  pButton
+                  type="submit"
+                  label="Review"
+                  class="p-button-success mt-2"
+                  [disabled]="commentForm.invalid"
+                ></button>
+              </form>
+            </td>
+            <td *ngIf="!canComment(i)">{{ comments[i].text }}</td>
             <td>
               <p-rating
                 [(ngModel)]="archivedBooking.rating"
                 [disabled]="!canRate(i)"
                 [cancel]="false"
-                (onRate)="handleRatingClick($event, i)">
+                (onRate)="handleRatingClick($event, i)"
               >
+                >
               </p-rating>
             </td>
           </tr>
