hotfixes for rating update

--- a/frontend/src/app/components/decorater/decorater-dashboard-statistics/decorater-dashboard-statistics.component.html
+++ b/frontend/src/app/components/decorater/decorater-dashboard-statistics/decorater-dashboard-statistics.component.html
@@ -1,17 +1,17 @@
 <div class="row">
   <div class="col-md-12">
-    <p-chart type="bar" [data]="byMonthChartData" [options]="byMonthChartOptions" styleClass="p-mb-4"></p-chart>
+    <p-chart type="bar" [data]="byMonthChartData" [options]="byMonthChartOptions" styleClass="p-mb-4" id="chart1"></p-chart>
   </div>
   
 </div>
 <div class="row">
   <div class="col-md-12">
-    <p-chart type="pie" [data]="byDecoratorInFirmData" [options]="byDecoratorInFirmOptions" styleClass="p-mb-4"></p-chart>
+    <p-chart type="pie" [data]="byDecoratorInFirmData" [options]="byDecoratorInFirmOptions" styleClass="p-mb-4" id="chart2"></p-chart>
   </div>
 </div>
 <div class="row">
   <div class="col-md-12">
-    <p-chart type="bar" [data]="averagePerDayData" [options]="averagePerDatOptions" styleClass="p-mb-4"></p-chart>
+    <p-chart type="bar" [data]="averagePerDayData" [options]="averagePerDatOptions" styleClass="p-mb-4" id="chart3"></p-chart>
   </div>
   
 </div>
